# tinygrad

./: .coveragerc  .editorconfig  .env  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .swo  .tokeignore  4  404.html  :w  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTINUE.md  CONTRIBUTING.md  DIAGONAL_FIX.md  Dockerfile  HEVC_DECODE_IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile  README  README.md  WIP_LOCK.md  __init__-1.py  a.py  abstractions2.py  abstractions3.py  abstractions4.py  analyze_bitnet.py  autogen_stubs.sh  b.py  beam.py  bench_ops.py  bench_scaling.py  benchmark_as_strided.py  bitcast.py  (+171 more)
.beads/: .gitignore  README.md  config.yaml  issues.jsonl
.dev/: annotated.md  lowering.py
.pre-commit-hooks-scripts/: check_lines.sh  strip_whitespace.sh  test_quickstart.sh  use_as_external_package.sh
accel/: MAPPING  README
ane/: README  README.md  README.old  aneregs  build.sh  coreml_ane.py  query.m  test.cc  test.mm
assets/: _markdown_exec_pyodide.css  _markdown_exec_pyodide.js  _mkdocstrings.css
codegen/: kernel.py
datasets/: .gitignore  __init__.py  cifar.py  cifar10.py  cifar100.py  coco.py  imagenet.py  imagenet_download.py  kits19.py  librispeech.py  mnist.py  openimages.py  preprocess_imagenet.py  squad.py  stable_diffusion_apple.npy  transforms.py  utils.py  wikibooks.py  wikipedia.py
developer/: am.html  developer.html  hcq.html  index.html  kernelize.html  layout.html  runtime.html  speed.html  uop.html
devfiles/: mnist_fsdp.py
docker_emulate/: Dockerfile
docs/: DESIGNv2.md  Makefile  README.md  SHARDING.md  SHARDING_SHAPES.md  SUMMARY.md  ViewMergeProof.lean  abstractions.md  abstractions.py  abstractions2.py  abstractions3.py  abstractions4.py  adding-new-accelerators.md  adding_new_accelerators.md  algorithms.md  api-reference.md  beautiful.py  check.Dockerfile  cifar10_torch_tiny_backend.md  design  developer.md  dtypes.md  env_vars.md  function.md  gen_ref_pages.py  hlb_cifar10_tiny_backend.md  index.md  linearizer_v2.md  mkdocs.yml  mkdocs_exts.py  mnist.md  nn.md  nvidia_notes  quickstart.md  ramp.md  ramp.py  reshape_without_symbolic.md  reshape_without_symbolic_proof.lean  runtime.md  showcase.md  (+4 more)
docs-legacy/: DESIGNv2.md  OVERVIEW.md  README.md  abstractions2.py  abstractions3.py  adding_new_accelerators.md  env_vars.md
dtypes/: index.html
env_vars/: index.html
example/: tinyrvc.py
examples/: 2serious_mnist.py  QwQ.py  Qwen3VL.py  README.md  SHA3.py  adversarial_attacks.py  anthropic_challenge.py  attention_multigpu.py  audio_helpers.py  autoencoder_mnist.py  beautiful_cartpole.py  beautiful_cifar.py  beautiful_cifar_torch.py  beautiful_mnist.py  beautiful_mnist_distributed.py  beautiful_mnist_fsdp.py  beautiful_mnist_multigpu.py  benchmark.py  benchmark_aether.py  benchmark_copies.py  benchmark_onnx.py  benchmark_train_efficientnet.py  bitnet.py  coder.py  compile_efficientnet.py  compile_efficientnet_rs.py  compile_tensorflow.py  conversation.py  custom_function.py  decode_hevc_demo.py  deep_deterministic_policy_gradient.py  deep_mlp_fsdp.py  easy.py  efficientnet.py  example.swift  exampletorch.py  examply.py  export_code_from_onnx.py  f16_w_uint32.py  fast_kan.py  (+100 more)
examples/rl/wolpertingter/: action_space.py  arg_parser.py  ddpg.py  memory.py  normalized_env.py  pyproject.toml  util.py
examples/rl/wolpertingter/pyflann/: __init__.py  __init__.py.bak  exceptions.py  index.py  index.py.bak
examples/rl/wolpertingter/pyflann/bindings/: __init__.py.bak  flann_ctypes.py
examples/rl/wolpertingter/pyflann/io/: __init__.py  binary_dataset.py.bak  dat_dataset.py.bak  dataset.py  dataset.py.bak  npy_dataset.py  npy_dataset.py.bak
examples/rl/wolpertingter/pyflann/util/: __init__.py
examples/rl/wolpertingter/wolpingter/: main.py  model.py  random_process.py  train_test.py  wolp_agent.py
examples/rl/wolpertingter/wolpingter/pyflann/bindings/: __init__.py  flann_ctypes.py.bak  libflann.dylib
examples/rl/wolpertingter/wolpingter/pyflann/io/: __init__.py.bak  binary_dataset.py  dat_dataset.py  hdf5_dataset.py  hdf5_dataset.py.bak
examples/rl/wolpertingter/wolpingter/pyflann/util/: weave_tools.py  weave_tools.py.bak
extra/: aether.py  amd_elf.py  amdgpu_elf.py  archprobe.py  augment.py  autopad.py  bench_log.py  benchmark_llm.py  big_buck_bunny.hevc  bpetokenizer.py  checkpoint.py  cherry.py  ci.Dockerfile  cl_android.sh  clang_parsers.py  cuda_wrapper.py  cudacpu.cpp  dataloader.py  ddp.py  debug_sd_speed.py  disk_load_bm.py  disk_read_speed.py  distributed.py  dump_cache.py  efficientnet.py  eval_llm.py  executable_mmap.py  export_model.py  f16_decompress.py  f16_w_uint32.py  fp16.cuh  fp8_conversions.py  fsdp.py  gguf.py  gpu_counter_example.py  gradcheck.py  graph_rewrite_count.py  hashing.py  helpers.py  hip_cpu_wrapper.py  (+83 more)
fpga/: .gitignore  README  TPUNOTES  all.sh  build.sh  console.py  digilent_arty.cfg  prog.sh  riscv.sh
function/: index.html
ip_work/: abs2_mod.py  code_gen_eg.py  code_gen_eg_add.py  code_gen_eg_set_value.py  copy_nums_to_gpu.py  dot_prod_eg.cpp  dot_prod_eg.py  matrix_mul_eg.py  test_1.py  variance_calc_eg.py
mason_experiments/: conv2d.py  multi.ipynb  multiviews.py  st.py
mnist/: index.html
models/: bert.py  convnext.py  dilated_transformer.py  efficientnet.py  flux_schnell_tiny.py  mask_rcnn.py  mask_rcnn_loss.py  maskrcnn.py  resnet.py  retinanet.py  rnnt.py  transformer.py  transformer_bert.py  unet3d.py  unet3d_v2.py  vit.py
nn/: __init__.py  index.html  optim.py  state.py
openpilot/: benchmark.txt  build.sh  compile.py  compile2.py  compile3.py  go.sh  manual_test.sh  optimize.py  run_thneed.cc  run_thneed.py  test.sh
quickstart/: index.html
runtime/: index.html  ops_clang.py  ops_llvm.py  ops_webgpu.py
scripts/: test_cdna4_fa.sh
search/: search_index.json
shape/: shapetracker.py  view.py
showcase/: index.html
spec/: tinyspec.tex
tensor/: creation.html  elementwise.html  index.html  movement.html  ops.html  properties.html
test/: Dockerfile  README  config.py  conftest.py  env.py  external_osx_profiling.py  helpers.py  (+226 more)
(+3390 files in other folders)
