[tool.poetry]
name = "tinygrad"
version = "0.7.0"
description = "You like pytorch? You like micrograd? You love tinygrad! ❤️"
authors = ["George Hotz <https://github.com/geohot>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "tinygrad" },
    { include = "tinygrad/codegen" },
    { include = "tinygrad/nn" },
    { include = "tinygrad/renderer" },
    { include = "tinygrad/runtime" },
    { include = "tinygrad/shape" },
    { include = "tinygrad/features" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "*"
requests = "*"
tqdm = "*"
networkx = "*"
pyopencl = "*"
"pyobjc-framework-Metal" = { version = "*", platform = "darwin" }
"pyobjc-framework-Cocoa" = { version = "*", platform = "darwin" }
"pyobjc-framework-libdispatch" = { version = "*", platform = "darwin" }

[tool.poetry.extras]
llvm = ["llvmlite"]
cuda = ["pycuda"]
arm = ["unicorn"]
# triton = ["triton-nightly>=2.1.0.dev20231014192330", "pycuda"]
webgpu = ["wgpu"]
linting = [
    "flake8",
    "pylint",
    "mypy",
    "typing-extensions",
    "pre-commit",
    "ruff",
    "types-tqdm",
]
testing = [
    "torch",
    "pillow",
    "pytest",
    "pytest-xdist",
    "onnx",
    "onnx2torch",
    "opencv-python",
    "tabulate",
    "safetensors",
    "cloudpickle",
    "transformers",
    "sentencepiece",
    "tiktoken",
    "librosa",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
per-file-ignores = {"__init__.py" = ["F401"]}