[project]
name = "tinygrad"
version = "0.11.0"
description = "You like pytorch? You like micrograd? You love tinygrad! <3"
authors = [{ name = "George Hotz" }]

classifiers = ["Programming Language :: Python :: 3"]

license = 'MIT'
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = [
  'tinygrad',
  'tinygrad.apps',
  'tinygrad.codegen',
  'tinygrad.codegen.opt',
  'tinygrad.codegen.late',
  'tinygrad.engine',
  'tinygrad.mixin',
  'tinygrad.nn',
  'tinygrad.renderer',
  'tinygrad.runtime',
  'tinygrad.runtime.autogen',
  'tinygrad.runtime.autogen.am',
  'tinygrad.runtime.autogen.nv',
  'tinygrad.runtime.graph',
  'tinygrad.runtime.support',
  'tinygrad.runtime.support.am',
  'tinygrad.runtime.support.nv',
  'tinygrad.schedule',
  'tinygrad.uop',
  'tinygrad.viz',
]

[tool.setuptools.package-data]
tinygrad = ["py.typed"]
"tinygrad.viz" = ["index.html", "assets/**/*", "js/*"]


[project.optional-dependencies]
arm = ["unicorn"]
triton = ["triton-nightly>=2.1.0.dev20231014192330"]
linting = [
  "pylint",
  "mypy==1.18.1",
  "typing-extensions",
  "pre-commit",
  "ruff",
  "numpy",
  "typeguard",
]
# mlperf = [
#   "mlperf-logging @ git+https://github.com/mlperf/logging.git@5.0.0-rc3",
# ]
testing_minimal = [
  "numpy",
  "torch==2.9.0",
  "pytest",
  "pytest-xdist",
  "pytest-timeout",
  "pytest-split",
  "hypothesis",
  "z3-solver",
]
testing_unit = ["tinygrad[testing_minimal]", "tqdm", "safetensors", "tabulate"]
testing = [
  "tinygrad[testing_minimal]",
  "pillow",
  "onnx==1.18.0",
  "onnx2torch",
  "onnxruntime",
  "opencv-python",
  "tabulate",
  "tqdm",
  "safetensors",
  "transformers",
  "sentencepiece",
  "tiktoken",
  "blobfile",
  "librosa",
  # librosa needs numba but uv ignores python upper bounds and some numba versions require <python3.10
  "numba>=0.55",
  "networkx",
  "nibabel",
  "bottle",
  "ggml-python",
  "capstone",
  "pycocotools",
  "boto3",
  "pandas",
  "influxdb3-python",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "markdown-callouts",
  "markdown-exec[ansi]",
  "black",
  "numpy",
]


[tool.mutmut]
paths_to_mutate = ["tinygrad/"]
do_not_mutate = [
  "tinygrad/apps/*",
  "tinygrad/codegen/*",
  "tinygrad/engine/*",
  "tinygrad/nn/*",
  "tinygrad/renderer/*",
  "tinygrad/runtime/*",
  "tinygrad/schedule/*",
  "tinygrad/uop/*",
  "tinygrad/viz/*",
  "tinygrad/device.py",
  "tinygrad/dtype.py",
  "tinygrad/gradient.py",
  "tinygrad/helpers.py",
  "tinygrad/tensor.py",
]
tests_dir = ["test/test_tiny.py", "test/test_ops.py"]
debug = true
