[tool.poetry]
name = "wolpertinger"
version = "0.1.0"
description = "Wolpertinger Agents in tinygrad"
authors = ["mdaiter"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tinygrad = "^0.9.2"
gymnasium = "^0.29.1"
numpy = "2.1.1"
setproctitle = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
